//
// Copyright 2024 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "buf/validate/validate.proto";
import "controlplane/v1/response_messages.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service WorkflowService {
  rpc Create(WorkflowServiceCreateRequest) returns (WorkflowServiceCreateResponse);
  rpc Update(WorkflowServiceUpdateRequest) returns (WorkflowServiceUpdateResponse);
  rpc List(WorkflowServiceListRequest) returns (WorkflowServiceListResponse);
  rpc View(WorkflowServiceViewRequest) returns (WorkflowServiceViewResponse);
  rpc Delete(WorkflowServiceDeleteRequest) returns (WorkflowServiceDeleteResponse);
}

message WorkflowServiceCreateRequest {
  string name = 1 [(buf.validate.field) = {
    // NOTE: validations can not be shared yet https://github.com/bufbuild/protovalidate/issues/51
    cel: {
      message: "must contain only lowercase letters, numbers, and hyphens."
      expression: "this.matches('^[a-z0-9]([-a-z0-9]*[a-z0-9])?$')"
      id: "name.dns-1123"
    }
  }];
  string project_name = 2 [(buf.validate.field).string = {min_len: 1}];
  // The name of the workflow contract
  string contract_name = 3 [(buf.validate.field) = {
    ignore_empty: true
    cel: {
      message: "must contain only lowercase letters, numbers, and hyphens."
      expression: "this.matches('^[a-z0-9]([-a-z0-9]*[a-z0-9])?$')"
      id: "name.dns-1123"
    }
  }];
  string team = 4;
  string description = 5;
  bool public = 6;
}

message WorkflowServiceUpdateRequest {
  string name = 1 [(buf.validate.field) = {
    // NOTE: validations can not be shared yet https://github.com/bufbuild/protovalidate/issues/51
    cel: {
      message: "must contain only lowercase letters, numbers, and hyphens."
      expression: "this.matches('^[a-z0-9]([-a-z0-9]*[a-z0-9])?$')"
      id: "name.dns-1123"
    }
  }];
  // "optional" allow us to detect if the value is explicitly set
  // and not just the default value
  string project_name = 3 [(buf.validate.field).string = {min_len: 1}];
  optional string team = 4;
  optional bool public = 5;
  optional string description = 6;
  optional string contract_name = 7 [(buf.validate.field) = {
    cel: {
      message: "must contain only lowercase letters, numbers, and hyphens."
      expression: "this.matches('^[a-z0-9]([-a-z0-9]*[a-z0-9])?$')"
      id: "name.dns-1123"
    }
  }];
}

message WorkflowServiceUpdateResponse {
  WorkflowItem result = 1;
}

message WorkflowServiceCreateResponse {
  WorkflowItem result = 1;
}

message WorkflowServiceDeleteRequest {
  string name = 1 [(buf.validate.field) = {
    // NOTE: validations can not be shared yet https://github.com/bufbuild/protovalidate/issues/51
    cel: {
      message: "must contain only lowercase letters, numbers, and hyphens."
      expression: "this.matches('^[a-z0-9]([-a-z0-9]*[a-z0-9])?$')"
      id: "name.dns-1123"
    }
  }];

  string project_name = 2 [(buf.validate.field).string = {min_len: 1}];
}

message WorkflowServiceDeleteResponse {}

message WorkflowServiceListRequest {}
message WorkflowServiceListResponse {
  repeated WorkflowItem result = 1;
}

message WorkflowServiceViewRequest {
  string name = 1 [(buf.validate.field) = {
    // NOTE: validations can not be shared yet https://github.com/bufbuild/protovalidate/issues/51
    cel: {
      message: "must contain only lowercase letters, numbers, and hyphens."
      expression: "this.matches('^[a-z0-9]([-a-z0-9]*[a-z0-9])?$')"
      id: "name.dns-1123"
    }
  }];
  string project_name = 2 [(buf.validate.field).string = {min_len: 1}];
}

message WorkflowServiceViewResponse {
  WorkflowItem result = 1;
}
